objects/MMPJ_Ext_Vign_Gestion_des_stocks__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for Champagne</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_stockage__c</fullName>
        <label>Date de stockage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAF Collective</fullName>
                </value>
                <value>
                    <fullName>COCH Bouteille</fullName>
                </value>
                <value>
                    <fullName>Réserve Individuelle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Vigneron__c</fullName>
        <label>Vigneron</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Gestion des stocks</relationshipLabel>
        <relationshipName>Gestion_des_stocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_HL__c</fullName>
        <label>Volume (HL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Annee__c</fullName>
        <label>Année</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Classement__c</fullName>
        <label>Classement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AOC</fullName>
                </value>
                <value>
                    <fullName>RI</fullName>
                </value>
                <value>
                    <fullName>VO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Clef_technique_IDapports__c</fullName>
        <externalId>true</externalId>
        <label>Clef technique IDapports</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Libelle_Unite__c</fullName>
        <label>Libellé Unité</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Quantite__c</fullName>
        <label>Quantité</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Gestion des stocks</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Date_de_stockage__c</columns>
        <columns>MMPJ_Ext_Vign_Vigneron__c</columns>
        <columns>MMPJ_Ext_Vign_Type__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_HL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Champagne</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>STOCK-{00000}</displayFormat>
        <label>Intitulé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestion des stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>